tests/ui/pattern/usefulness/floats.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> $DIR/floats.rs:10:11
   |
LL |     match 0.0 {
   |           ^^^ pattern `_` not covered
   |
   = note: the matched value is of type `f64`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~       0.0..=1.0 => {}
LL +       _ => todo!()
   |

error: unreachable pattern
  --> $DIR/floats.rs:16:7
   |
LL |       0.02f64 => {}
   |       ^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/floats.rs:2:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0004`.
